fix user overlaps

--- a/src/styles/chat/ChatList.css
+++ b/src/styles/chat/ChatList.css
@@ -91,6 +91,8 @@ aside {
 }
 
 .chat-box {
+  width: 100%;
+
   position: relative;
   flex-grow: 1;
 
@@ -150,8 +152,13 @@ aside {
   color: var(--text-smoke);
 }
 .chat-name {
+  width: calc(100% - 25px);
   font-weight: 300;
   line-height: calc(var(--font-size) * 1.3);
+
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .chat-message {
   max-width: 100%;
